k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myvizion-admin-web
  namespace: myvizion-react-web-ns
  labels:
    app: myvizion-admin-web
spec:
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: myvizion-admin-web
  template:
    metadata:
      labels:
        app: myvizion-admin-web
    spec:
      containers:
        - name: myvizion-admin-web
          image: registry.digitalocean.com/hlads/myvizion-admin-web-img:0385d11
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "350Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
