k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myvizion-admin-web-service
  namespace: myvizion-react-web-ns
spec:
  selector:
    app: myvizion-admin-web
  ports:
    - protocol: TCP
      name: http
      port: 80 # Default port for image
